vbnc/vbnc/tests/Errors/30311-34.vb
Imports System
Class T
    Const M_Boolean As Boolean = "c"c
End Class